--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -46,7 +46,7 @@ $node-width: 272px;
 
 .table_header {
   display: grid;
-  grid-template-columns: 3.2em 1fr;
+  grid-template-columns: 3.2em 1fr 1em;
   gap: 0em 0.5em;
   width: 100%;
   height: 3.2em;
