--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -526,3 +526,10 @@ $size: 1.2em;
     }
   }
 }
+
+.error_tooltip {
+  padding: 8px;
+  color: #ffffff;
+  border-radius: 4px;
+  background: #082247;
+}
