--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -175,3 +175,7 @@ body.vscode-dark {
   background-color: var(--background--base);
   color: var(--text-color--title)
 }
+
+.modal-content {
+  background-color: var(--background--04);
+}
