fix: width of doc wrapper

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -2,16 +2,6 @@
 
 
 .documentation-wrapper {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  padding: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  overflow-y: overlay;
   :global .btn-group {
     margin-bottom: var(--spacing-3xl);
   }
@@ -112,8 +102,7 @@
   }
 }
 .doc-generator {
-  max-height: calc(100% - 40px);
-  flex-grow: 1;
+  max-height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
   
@@ -130,7 +119,9 @@
     overflow: hidden;
     & .body {
       width: 100%;
+      min-width: var(--bs-breakpoint-md);
       overflow: overlay;
+      padding-right: 1rem;
 
       & :global .alert {
         margin-top: 12px;
