feat: Add adjustable column width for perspective viewer grid (#1376)
* modify perspective viewer td styling

* fix icon issue

* fix truncation

--- a/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
+++ b/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
@@ -1,25 +1,22 @@
 regular-table {
   td,
   th {
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 20px !important;
     user-select: text;
     cursor: text;
-
-    .clickable-cell-div {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .clickable-cell-text {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      width: 100px;
-    }
 
     .open-icon {
       margin-left: 5px;
       color: var(--text-active);
+      position: absolute;
+      right: 5px;
+
+      svg {
+        margin-bottom: -2.5px;
+      }
     }
   }
 }
